add google and github connexion oauth

--- a/.env
+++ b/.env
@@ -7,3 +7,9 @@
 DATABASE_URL="mongodb+srv://noiyys:oPThX3QF13QyNXgD@cluster0.xutczis.mongodb.net/test"
 NEXTAUTH_JWT_SECRET="NEXT-JWT-SECRET"
 NEXTAUTH_SECRET="NEXT-SECRET"
+
+GITHUB_ID=3b67bef797ddd6ba8a76
+GITHUB_SECRET=91e23110eca25b78c9329d9ac0415aee1aa80d6e
+
+GOOGLE_CLIENT_ID=213984941970-0eo7ta1jq8cqp8sk7g7i51l1ksdscofj.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
